--- a/GC_MS_5_1A.qmd
+++ b/GC_MS_5_1A.qmd
@@ -1,7 +1,6 @@
 ---
-title: "el_bias"
-format: gfm
-editor: visual
+title: "Scenario 1A (5 µg/mL)" 
+format: dashboard
 ---
 
 # Libraries
@@ -20,11 +19,9 @@ library(here)
 library(parallel)
 library(pdftools)
 library(stringr)
-library(rJava)
-library(tabulapdf) # for data tables extraction
 library(readxl)
 library(reticulate)
-#py_install(c("pandas", "joblib", "scikit-learn"))
+py_install(c("pandas", "joblib", "scikit-learn"))
 
 ```
 
@@ -79,15 +76,15 @@ lcmspos_clap_clean <- lcmspos_clap %>%
 
 
 hist(lcmspos_clap_clean$"5 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 5 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 5 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "skyblue")
 hist(lcmspos_clap_clean$"10 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 10 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 10 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "orange")
 hist(lcmspos_clap_clean$"20 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 20 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 20 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "red")
 
@@ -107,15 +104,15 @@ lcmsneg_clap_clean
 
 
 hist(lcmsneg_clap_clean$"5 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 5 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 5 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "skyblue")
 hist(lcmsneg_clap_clean$"10 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 10 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 10 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "orange")
 hist(lcmsneg_clap_clean$"20 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 20 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 20 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "red")
 
@@ -196,6 +193,8 @@ summary_table <- data.frame(
   F1 = numeric(),
   f_beta = numeric()
 )
+
+all_distributions <- data.frame()
 ```
 
 ## GC-MS No Correction Scenarios
@@ -208,7 +207,9 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-
+dist_f1 <- numeric(N_sim)
+dist_f5 <- numeric(N_sim)
+beta <- 5
 
 for (i in 1:N_sim) {
 ## 1) Concentration around the AET
@@ -221,10 +222,35 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -236,7 +262,7 @@ recall <- total_TP / count_Above_AET
 precision <- total_TP / (total_TP + total_FP)
 
 F1 <- (2 * precision * recall / (precision + recall))
-beta <- 5
+
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
@@ -251,9 +277,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "No Correction",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -309,10 +342,35 @@ simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, repla
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -341,11 +399,18 @@ summary_table <- rbind(summary_table, data.frame(
     precision = precision,
     recall = recall,
     F1 = F1,
-    f_betal = f_beta
+    f_beta = f_beta
 ))
+
+
+metrics_df <- data.frame(
+  Method = m_name,
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 }
-
-
 UF_RSD
 ```
 
@@ -387,10 +452,35 @@ corrected_conc <- exp_conc * (meanGCMS / percentileGCMS)
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -418,8 +508,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "Mean/Percentile (16th)",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -473,10 +571,35 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -503,9 +626,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "RRFlow",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ## GC-MS Correction RRF\<1
@@ -558,10 +688,35 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -588,9 +743,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "RRF<1",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -631,10 +793,35 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -662,10 +849,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Percentile 10th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
 
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ## GC-MS Correction percentile 20th
@@ -701,10 +894,35 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -732,9 +950,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Percentile 20th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -753,7 +978,6 @@ Loading the ML Model
 ```{python}
 import joblib
 import pandas as pd
-
 # Load the model and the feature list
 model = joblib.load('rf_rrf_model.joblib')
 feats = joblib.load('features.joblib')
@@ -792,10 +1016,35 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
+  
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -823,9 +1072,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Machine Learning",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -876,15 +1132,43 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
 
 ```
 
+# Comparison metrics F5
+
+```{r}
+all_distributions$Method <- factor(all_distributions$Method, levels = method_levels)
+
+ggplot(all_distributions, aes(x = Method, y = F5)) +
+  geom_violin(fill = "orange", alpha = 0.6) +
+  geom_boxplot(width = 0.1, color = "black", alpha = 0.5) +
+  labs(
+    title = paste0("Distribution of F5 scores | GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
+    subtitle = "Conc. Uniform distribution (around AET), RRF sampled from CLAP list data") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r}
+metrics_distributions <- all_distributions %>%
+  group_by(Method) %>%
+  summarise(
+    Mean_F1 = mean(F1, na.rm = TRUE), 
+    SD_F1 = sd(F1, na.rm = TRUE),
+    Mean_F5 = mean(F5, na.rm = TRUE),
+    SD_F5 = sd(F5, na.rm = TRUE)
+  )
+
+print(metrics_distributions)
+```
+
 ```{r}
 summary_FN <- summary_table %>%
   mutate(
     precision = round(precision, 2),
     recall = round(recall, 2),
     F1 = round(F1, 2),
-    f_betal = round(f_betal, 2)
+    f_beta = round(f_beta, 2)
   ) %>%
-  select(Method, precision, recall, F1, f_betal)
+  select(Method, precision, recall, F1, f_beta)
 
 print(summary_FN)
 ```
