--- a/GC_MS_5_3A.qmd
+++ b/GC_MS_5_3A.qmd
@@ -8,6 +8,7 @@ editor: visual
 
 ```{r}
 Sys.setenv(RETICULATE_PYTHON = "C:/Users/misak/anaconda3/python.exe")
+
 #install.packages("tabulapdf")
 
 # Load required packages
@@ -79,15 +80,15 @@ lcmspos_clap_clean <- lcmspos_clap %>%
 
 
 hist(lcmspos_clap_clean$"5 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 5 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 5 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "skyblue")
 hist(lcmspos_clap_clean$"10 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 10 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 10 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "orange")
 hist(lcmspos_clap_clean$"20 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 20 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS+ with a 20 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "red")
 
@@ -107,15 +108,15 @@ lcmsneg_clap_clean
 
 
 hist(lcmsneg_clap_clean$"5 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 5 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 5 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "skyblue")
 hist(lcmsneg_clap_clean$"10 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 10 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 10 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "orange")
 hist(lcmsneg_clap_clean$"20 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 20 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 20 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "red")
 
@@ -126,7 +127,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 15
+AET <- 5
 ```
 
 ## Uniform distribution
@@ -196,6 +197,7 @@ summary_table <- data.frame(
   F1 = numeric(),
   f_beta = numeric()
 )
+all_distributions <- data.frame()
 ```
 
 ## GC-MS No Correction Scenarios
@@ -208,7 +210,9 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-
+dist_f1 <- numeric(N_sim)
+dist_f5 <- numeric(N_sim)
+beta <- 5
 
 for (i in 1:N_sim) {
 Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
@@ -224,10 +228,33 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -254,9 +281,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "No Correction",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -315,10 +349,33 @@ simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, repla
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -347,9 +404,15 @@ summary_table <- rbind(summary_table, data.frame(
     precision = precision,
     recall = recall,
     F1 = F1,
-    f_betal = f_beta
+    f_beta = f_beta
 ))
-}
+metrics_df <- data.frame(
+  Method = m_name,
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)}
 
 
 UF_RSD
@@ -396,10 +459,33 @@ corrected_conc <- exp_conc * (meanGCMS / percentileGCMS)
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+   iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -427,9 +513,15 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+metrics_df <- data.frame(
+  Method = "Mean/Percentile (16th)",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
 
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ## GC-MS Correction RRFlow
@@ -485,10 +577,33 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+ iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -515,9 +630,15 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+metrics_df <- data.frame(
+  Method = "RRFlow",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
 
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ## GC-MS Correction RRF\<1
@@ -573,10 +694,33 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+ iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -603,9 +747,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "RRF<1",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -649,10 +800,33 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+    iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -680,9 +854,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Percentile 10th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -722,10 +903,33 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+   iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -753,10 +957,17 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
 
+metrics_df <- data.frame(
+  Method = "Percentile 20th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -816,10 +1027,33 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -847,9 +1081,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Machine Learning",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ```{r}
@@ -900,15 +1141,30 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
 
 ```
 
+# Comparison metrics F5
+
+```{r}
+all_distributions$Method <- factor(all_distributions$Method, levels = method_levels)
+
+ggplot(all_distributions, aes(x = Method, y = F5)) +
+  geom_violin(fill = "orange", alpha = 0.6) +
+  geom_boxplot(width = 0.1, color = "black", alpha = 0.5) +
+  labs(
+    title = paste0("Distribution of F5 scores | GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
+    subtitle = "Conc. Uniform distribution (around AET), RRF sampled from CLAP list data") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
 ```{r}
 summary_FN <- summary_table %>%
   mutate(
     precision = round(precision, 2),
     recall = round(recall, 2),
     F1 = round(F1, 2),
-    f_betal = round(f_betal, 2)
+    f_beta = round(f_beta, 2)
   ) %>%
-  select(Method, precision, recall, F1, f_betal)
+  select(Method, precision, recall, F1, f_beta)
 
 print(summary_FN)
 ```
