--- a/LC_MS-_5_1A.qmd
+++ b/LC_MS-_5_1A.qmd
@@ -107,15 +107,15 @@ lcmsneg_clap_clean
 
 
 hist(lcmsneg_clap_clean$"5 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 5 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 5 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "skyblue")
 hist(lcmsneg_clap_clean$"10 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 10 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 10 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "orange")
 hist(lcmsneg_clap_clean$"20 µg/mL", 
-     main = "Histogram of RRFs for GC/MS with a 20 µg/mL surrogate Concentration", 
+     main = "Histogram of RRFs for LC/MS- with a 20 µg/mL surrogate Concentration", 
      xlab = "RRF",
      col = "red")
 
@@ -196,6 +196,9 @@ summary_table <- data.frame(
   F1 = numeric(),
   f_beta = numeric()
 )
+
+all_distributions <- data.frame()
+
 ```
 
 ## LC-MS No Correction Scenarios
@@ -208,7 +211,9 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-
+dist_f1 <- numeric(N_sim)
+dist_f5 <- numeric(N_sim)
+beta <- 5
 
 for (i in 1:N_sim) {
 ## 1) Concentration around the AET
@@ -221,10 +226,34 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -251,8 +280,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "No Correction",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -313,10 +350,34 @@ simulated_RRF <- sample(lcmsneg_clap_clean$"5 µg/mL", size = N_extractables, re
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -345,8 +406,17 @@ summary_table <- rbind(summary_table, data.frame(
     precision = precision,
     recall = recall,
     F1 = F1,
-    f_betal = f_beta
+    f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = m_name,
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
+
 }
 
 
@@ -391,10 +461,34 @@ corrected_conc <- exp_conc * (meanLCMS / percentileLCMS)
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -422,8 +516,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "Mean/Percentile (16th)",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -477,10 +579,34 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -507,8 +633,17 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "RRFlow",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
@@ -562,10 +697,34 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -592,8 +751,17 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "RRF<1",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
@@ -635,10 +803,34 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -666,9 +858,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Percentile 10th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -704,11 +903,34 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -736,8 +958,16 @@ summary_table <- rbind(summary_table, data.frame(
   precision = precision,
   recall = recall,
   F1 = F1,
-  f_betal = f_beta
+  f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "Percentile 20th",
+  F1 = dist_f1,
+  F5 = dist_f5
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 
 ```
@@ -748,88 +978,6 @@ summary_table
 
 ```{r}
 print(summary_table)
-```
-
-## Machine Learning
-
-Loading the ML Model
-
-```{python}
-import joblib
-import pandas as pd
-
-# Load the model and the feature list
-model = joblib.load('rf_rrf_model.joblib')
-feats = joblib.load('features.joblib')
-
-def predict_rrf_raw(df):
-    return model.predict(df[feats])
-```
-
-```{r}
-gc_ms <- read_csv("final_model_data.csv") %>%
-  drop_na(BP, `Refractive Index`, TPSA, NHOHCount, NumHDonors, NumRotatableBonds, NOCount) 
-```
-
-```{r}
-set.seed(123)
-N_sim <- 10000
-N_extractables <- 160
-total_FN <- 0
-total_FP <- 0
-total_TP <- 0
-total_TN <- 0
-
-total_points <- N_sim * N_extractables
-
-for (i in 1:N_sim) {
-sim_data <- gc_ms %>% 
-  sample_n(N_extractables, replace = TRUE)
-  
-## 1) Concentration around the AET
-base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
-## VI) RRF generated via the machine learning
-simulated_RRF <- py$predict_rrf_raw(sim_data)
-## no correction
-corrected_conc <- base_conc_sim * simulated_RRF
-
-is_above_threshold <- base_conc_sim > AET
-reported_above_threshold <- corrected_conc > AET
-
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-}
-
-count_Above_AET <- total_TP + total_FN
-count_Below_AET  <- total_TN + total_FP
-FN_Rate_final <- total_FN / count_Above_AET
-FP_Rate_final <- total_FP / count_Below_AET
-
-recall <- total_TP / count_Above_AET
-precision <- total_TP / (total_TP + total_FP)
-
-F1 <- (2 * precision * recall / (precision + recall))
-beta <- 5
-f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
-SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
-
-
-summary_table <- rbind(summary_table, data.frame(
-  Method = "Machine Learning",
-  FN_Rate = FN_Rate_final,
-  FP_Rate = FP_Rate_final,
-  FN_SD = SD_FN,
-  FP_SD = SD_FP,
-  precision = precision,
-  recall = recall,
-  F1 = F1,
-  f_betal = f_beta
-))
-
 ```
 
 ```{r}
@@ -857,8 +1005,7 @@ method_levels <- c(
   "RRFlow",
   "RRF<1",
   "Percentile 10th",
-  "Percentile 20th",
-  "Machine Learning")
+  "Percentile 20th")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -886,11 +1033,39 @@ summary_FN <- summary_table %>%
     precision = round(precision, 2),
     recall = round(recall, 2),
     F1 = round(F1, 2),
-    f_betal = round(f_betal, 2)
+    f_beta = round(f_beta, 2)
   ) %>%
-  select(Method, precision, recall, F1, f_betal)
+  select(Method, precision, recall, F1, f_beta)
 
 print(summary_FN)
+```
+
+# Comparison metrics F5
+
+```{r}
+all_distributions$Method <- factor(all_distributions$Method, levels = method_levels)
+
+ggplot(all_distributions, aes(x = Method, y = F5)) +
+  geom_violin(fill = "orange", alpha = 0.6) +
+  geom_boxplot(width = 0.1, color = "black", alpha = 0.5) +
+  labs(
+    title = paste0("Distribution of F5 scores | LC-MS- Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
+    subtitle = "Conc. Uniform distribution (around AET), RRF sampled from CLAP list data") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r}
+metrics_distributions <- all_distributions %>%
+  group_by(Method) %>%
+  summarise(
+    Mean_F1 = mean(F1, na.rm = TRUE), 
+    SD_F1 = sd(F1, na.rm = TRUE),
+    Mean_F5 = mean(F5, na.rm = TRUE),
+    SD_F5 = sd(F5, na.rm = TRUE)
+  )
+
+print(metrics_distributions)
 ```
 
 # ROC and Precision Recall plots
